# jc

./: .gitignore  README.md  build.bat  deploy-gui.bat  deploy.bat  rust-toolchain.toml
.github/: Dockerfile.kylin-apt  kylin-fallback-index.html
.github/docker/: Dockerfile.kylin-apt  kylin-fallback-index.html
.github/workflows/: build.yml
docs/: tauri-v1-impact.md
scripts/: edition2021-pins.txt  generate-lockfile.ps1  msrv1772-overrides.txt  pin-msrv1772.ps1  pin-rust1772-deps.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: README.md
src-tauri/src/: config.rs  hardware.rs  main.rs  startup.rs
