[package]
name = "machine-code-tool"
version = "2.1.0"
description = "机器码获取工具 - 跨平台硬件信息获取"
authors = ["Glodon Technology Co., Ltd."]
license = "Proprietary"
repository = ""
default-run = "machine-code-tool"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "machine-code-tool"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# 固定 Tauri 1.6.8（勿用 git 1.x 分支，会拉到 edition2024 依赖）
tauri-build = { version = "=1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=1.6.8", features = ["devtools", "windows7-compat"] }

# Rust 1.77.2 / Win7：以下 crate 新版本已切 edition2024，必须精确锁定
# 完整 pin 列表见 scripts/edition2021-pins.txt（含 uuid/tempfile 等引入 getrandom 0.4 的父 crate）
time = "=0.3.41"
ignore = "=0.4.23"
globset = "=0.4.16"
indexmap = "=2.13.0"
home = "=0.5.11"
uuid = "=1.18.0"
tempfile = "=3.20.0"
idna_adapter = "=1.2.1"

# Web服务框架
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.3", default-features = false, features = ["compression"] }

# 系统信息获取
sysinfo = "0.29"
mac_address = "1.1"

# 跨平台系统调用
libc = "0.2"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
env_logger = "0.10"

# 配置文件
config = "0.13"
dirs = "5.0"

# 加密
sha2 = "0.10"
hex = "0.4"

# HTTP客户端 - 使用原生TLS，避免OpenSSL依赖
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 浏览器打开
webbrowser = "0.8"

# Windows特定依赖
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase", "winreg", "winerror", "winnt", "processthreadsapi",
    "handleapi", "sysinfoapi", "winuser", "shellapi"
] }
wmi = "0.13"

# macOS特定依赖
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.5"

# Linux特定依赖 (银河麒麟)
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.27"

[features]
# Tauri v1: 生产构建使用 filesystem protocol
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

# 确保使用原生TLS实现，避免OpenSSL依赖
[profile.release]
strip = true  # 减小二进制文件大小
lto = true    # 链接时优化
codegen-units = 1  # 更好的优化
